vendor/bifrost/tls/bindings/ssl.odin


	// SSL_set_chain_and_key sets the certificate chain and private key for a TLS
	// client or server. References to the given |CRYPTO_BUFFER| and |EVP_PKEY|
	// objects are added as needed. Exactly one of |privkey| or |privkey_method|
	// may be non-NULL. Returns one on success and zero on error.
	SSL_set_chain_and_key :: proc(ssl: ^SSL, certs: ^^CRYPTO_BUFFER, num_certs: c.size_t, privkey: ^EVP_PKEY, privkey_method: ^SSL_PRIVATE_KEY_METHOD) -> i32 ---

	// SSL_CTX_get0_chain returns the list of |CRYPTO_BUFFER|s that were set by
	// |SSL_CTX_set_chain_and_key|. Reference counts are not incremented by this
	// call. The return value may be |NULL| if no chain has been set.
	//
	// (Note: if a chain was configured by non-|CRYPTO_BUFFER|-based functions then
	// the return value is undefined and, even if not NULL, the stack itself may
	// contain nullptrs. Thus you shouldn't mix this function with
	// non-|CRYPTO_BUFFER| functions for manipulating the chain.)
	SSL_CTX_get0_chain :: proc(ctx: ^SSL_CTX) -> ^stack_st_CRYPTO_BUFFER ---

	// SSL_get0_chain returns the list of |CRYPTO_BUFFER|s that were set by
	// |SSL_set_chain_and_key|, unless they have been discarded. Reference counts
	// are not incremented by this call. The return value may be |NULL| if no chain
	// has been set.
	//
	// (Note: if a chain was configured by non-|CRYPTO_BUFFER|-based functions then
	// the return value is undefined and, even if not NULL, the stack itself may
	// contain nullptrs. Thus you shouldn't mix this function with
	// non-|CRYPTO_BUFFER| functions for manipulating the chain.)
	//
	// This function may return nullptr if a handshake has completed even if
	// |SSL_set_chain_and_key| was previously called, since the configuration
	// containing the certificates is typically cleared after handshake completion.
	SSL_get0_chain :: proc(ssl: ^SSL) -> ^stack_st_CRYPTO_BUFFER ---

	// SSL_CTX_use_RSAPrivateKey sets |ctx|'s private key to |rsa|. It returns one
	// on success and zero on failure.
	SSL_CTX_use_RSAPrivateKey :: proc(ctx: ^SSL_CTX, rsa: ^RSA) -> i32 ---

	// SSL_use_RSAPrivateKey sets |ctx|'s private key to |rsa|. It returns one on
	// success and zero on failure.
	SSL_use_RSAPrivateKey :: proc(ssl: ^SSL, rsa: ^RSA) -> i32 ---

	// The following functions configure certificates or private keys but take as
	// input DER-encoded structures. They return one on success and zero on
	// failure.
	SSL_CTX_use_certificate_ASN1   :: proc(ctx: ^SSL_CTX, der_len: c.size_t, der: ^u8) -> i32 ---
	SSL_use_certificate_ASN1       :: proc(ssl: ^SSL, der: ^u8, der_len: c.size_t) -> i32 ---
	SSL_CTX_use_PrivateKey_ASN1    :: proc(pk: i32, ctx: ^SSL_CTX, der: ^u8, der_len: c.size_t) -> i32 ---
	SSL_use_PrivateKey_ASN1        :: proc(type: i32, ssl: ^SSL, der: ^u8, der_len: c.size_t) -> i32 ---
	SSL_CTX_use_RSAPrivateKey_ASN1 :: proc(ctx: ^SSL_CTX, der: ^u8, der_len: c.size_t) -> i32 ---
	SSL_use_RSAPrivateKey_ASN1     :: proc(ssl: ^SSL, der: ^u8, der_len: c.size_t) -> i32 ---
}

// The following functions configure certificates or private keys but take as
// input files to read from. They return one on success and zero on failure. The
// |type| parameter is one of the |SSL_FILETYPE_*| values and determines whether
// the file's contents are read as PEM or DER.
SSL_FILETYPE_PEM  :: 1
SSL_FILETYPE_ASN1 :: 2

@(default_calling_convention="c")
foreign lib {
	SSL_CTX_use_RSAPrivateKey_file :: proc(ctx: ^SSL_CTX, file: cstring, type: i32) -> i32 ---
	SSL_use_RSAPrivateKey_file     :: proc(ssl: ^SSL, file: cstring, type: i32) -> i32 ---
	SSL_CTX_use_certificate_file   :: proc(ctx: ^SSL_CTX, file: cstring, type: i32) -> i32 ---
	SSL_use_certificate_file       :: proc(ssl: ^SSL, file: cstring, type: i32) -> i32 ---
	SSL_CTX_use_PrivateKey_file    :: proc(ctx: ^SSL_CTX, file: cstring, type: i32) -> i32 ---
	SSL_use_PrivateKey_file        :: proc(ssl: ^SSL, file: cstring, type: i32) -> i32 ---

	// SSL_CTX_use_certificate_chain_file configures certificates for |ctx|. It
	// reads the contents of |file| as a PEM-encoded leaf certificate followed
	// optionally by the certificate chain to send to the peer. It returns one on
	// success and zero on failure.
	//
	// WARNING: If the input contains "TRUSTED CERTIFICATE" PEM blocks, this
	// function parses auxiliary properties as in |d2i_X509_AUX|. Passing untrusted
	// input to this function allows an attacker to influence those properties. See
	// |d2i_X509_AUX| for details.
	SSL_CTX_use_certificate_chain_file :: proc(ctx: ^SSL_CTX, file: cstring) -> i32 ---

	// SSL_CTX_set_default_passwd_cb sets the password callback for PEM-based
	// convenience functions called on |ctx|.
	SSL_CTX_set_default_passwd_cb :: proc(ctx: ^SSL_CTX, cb: ^pem_password_cb) ---

	// SSL_CTX_get_default_passwd_cb returns the callback set by
	// |SSL_CTX_set_default_passwd_cb|.
	SSL_CTX_get_default_passwd_cb :: proc(ctx: ^SSL_CTX) -> ^pem_password_cb ---

	// SSL_CTX_set_default_passwd_cb_userdata sets the userdata parameter for
	// |ctx|'s password callback.
	SSL_CTX_set_default_passwd_cb_userdata :: proc(ctx: ^SSL_CTX, data: rawptr) ---

	// SSL_CTX_get_default_passwd_cb_userdata returns the userdata parameter set by
	// |SSL_CTX_set_default_passwd_cb_userdata|.
	SSL_CTX_get_default_passwd_cb_userdata :: proc(ctx: ^SSL_CTX) -> rawptr ---
}

// Custom private keys.
ssl_private_key_result_t :: enum u32 {
	success = 0,
	retry   = 1,
	failure = 2,
}

// ssl_private_key_method_st (aka |SSL_PRIVATE_KEY_METHOD|) describes private
// key hooks. This is used to off-load signing operations to a custom,
// potentially asynchronous, backend. Metadata about the key such as the type
// and size are parsed out of the certificate.
ssl_private_key_method_st :: struct {
	// sign signs the message |in| in using the specified signature algorithm. On
	// success, it returns |ssl_private_key_success| and writes at most |max_out|
	// bytes of signature data to |out| and sets |*out_len| to the number of bytes
	// written. On failure, it returns |ssl_private_key_failure|. If the operation
	// has not completed, it returns |ssl_private_key_retry|. |sign| should
	// arrange for the high-level operation on |ssl| to be retried when the
	// operation is completed. This will result in a call to |complete|.
	//
	// |signature_algorithm| is one of the |SSL_SIGN_*| values, as defined in TLS
	// 1.3. Note that, in TLS 1.2, ECDSA algorithms do not require that curve
	// sizes match hash sizes, so the curve portion of |SSL_SIGN_ECDSA_*| values
	// must be ignored. BoringSSL will internally handle the curve matching logic
	// where appropriate.
	//
	// It is an error to call |sign| while another private key operation is in
	// progress on |ssl|.
	sign: proc "c" (ssl: ^SSL, out: ^u8, out_len: ^c.size_t, max_out: c.size_t, signature_algorithm: u16, _in: ^u8, in_len: c.size_t) -> ssl_private_key_result_t,

	// decrypt decrypts |in_len| bytes of encrypted data from |in|. On success it
	// returns |ssl_private_key_success|, writes at most |max_out| bytes of
	// decrypted data to |out| and sets |*out_len| to the actual number of bytes
	// written. On failure it returns |ssl_private_key_failure|. If the operation
	// has not completed, it returns |ssl_private_key_retry|. The caller should
	// arrange for the high-level operation on |ssl| to be retried when the
	// operation is completed, which will result in a call to |complete|. This
	// function only works with RSA keys and should perform a raw RSA decryption
	// operation with no padding.
	//
	// It is an error to call |decrypt| while another private key operation is in
	// progress on |ssl|.
	decrypt: proc "c" (ssl: ^SSL, out: ^u8, out_len: ^c.size_t, max_out: c.size_t, _in: ^u8, in_len: c.size_t) -> ssl_private_key_result_t,

	// complete completes a pending operation. If the operation has completed, it
	// returns |ssl_private_key_success| and writes the result to |out| as in
	// |sign|. Otherwise, it returns |ssl_private_key_failure| on failure and
	// |ssl_private_key_retry| if the operation is still in progress.
	//
	// |complete| may be called arbitrarily many times before completion, but it
	// is an error to call |complete| if there is no pending operation in progress
	// on |ssl|.
	complete: proc "c" (ssl: ^SSL, out: ^u8, out_len: ^c.size_t, max_out: c.size_t) -> ssl_private_key_result_t,
}

@(default_calling_convention="c")
foreign lib {
	// SSL_set_private_key_method configures a custom private key on |ssl|.
	// |key_method| must remain valid for the lifetime of |ssl|.
	//
	// If using an RSA or ECDSA key, callers should configure signing capabilities
	// with |SSL_set_signing_algorithm_prefs|. Otherwise, BoringSSL may select a
	// signature algorithm that |key_method| does not support.
	SSL_set_private_key_method :: proc(ssl: ^SSL, key_method: ^SSL_PRIVATE_KEY_METHOD) ---

	// SSL_CTX_set_private_key_method configures a custom private key on |ctx|.
	// |key_method| must remain valid for the lifetime of |ctx|.
	//
	// If using an RSA or ECDSA key, callers should configure signing capabilities
	// with |SSL_CTX_set_signing_algorithm_prefs|. Otherwise, BoringSSL may select a
	// signature algorithm that |key_method| does not support.
	SSL_CTX_set_private_key_method :: proc(ctx: ^SSL_CTX, key_method: ^SSL_PRIVATE_KEY_METHOD) ---

	// SSL_CREDENTIAL_set_private_key_method configures a custom private key on
	// |cred|. |key_method| must remain valid for the lifetime of |cred|. It returns
	// one on success and zero if |cred| does not use private keys.
	//
	// If using an RSA or ECDSA key, callers should configure signing capabilities
	// with |SSL_CREDENTIAL_set1_signing_algorithm_prefs|. Otherwise, BoringSSL may
	// select a signature algorithm that |key_method| does not support. This is not
	// necessary for delegated credentials (see |SSL_CREDENTIAL_new_delegated|)
	// because delegated credentials only support a single signature algorithm.
	//
	// Functions in |key_method| will be passed an |SSL| object, but not |cred|
	// directly. Use |SSL_get0_selected_credential| to determine the selected
	// credential. From there, |SSL_CREDENTIAL_get_ex_data| can be used to look up
	// credential-specific state, such as a handle to the private key.
	SSL_CREDENTIAL_set_private_key_method :: proc(cred: ^SSL_CREDENTIAL, key_method: ^SSL_PRIVATE_KEY_METHOD) -> i32 ---

	// SSL_can_release_private_key returns one if |ssl| will no longer call into the
	// private key and zero otherwise. If the function returns one, the caller can
	// release state associated with the private key.
	//
	// NOTE: This function assumes the caller does not use |SSL_clear| to reuse
	// |ssl| for a second connection. If |SSL_clear| is used, BoringSSL may still
	// use the private key on the second connection.
	SSL_can_release_private_key :: proc(ssl: ^SSL) -> i32 ---
}

sk_SSL_CIPHER_delete_if_func :: proc "c" (^SSL_CIPHER, rawptr) -> i32
sk_SSL_CIPHER_cmp_func       :: proc "c" (^^SSL_CIPHER, ^^SSL_CIPHER) -> i32
sk_SSL_CIPHER_free_func      :: proc "c" (^SSL_CIPHER)
stack_st_SSL_CIPHER          :: struct {}
sk_SSL_CIPHER_copy_func      :: proc "c" (^SSL_CIPHER) -> ^SSL_CIPHER
